修复终审报告 iter6 全部问题 - P0/P1/P2 共 20+ 项
P0 修复:
- MergeSpec.detectDialect() 优先使用 JDBC URL 和 Connection.getMetaData() 检测方言，Hibernate 仅作最后回退
- MergeSpec.isJtaTransactionActive() Hibernate 回退路径添加 Class.forName 预检查
- EncryptConverter 添加密钥最小长度验证 (>=8 字符)，防止弱密钥字典攻击
- MergeSpec H2 标识符使用双引号转义并转大写，防止保留字冲突
- SoftDeleteJpaRepository 批量删除改用 SoftDeleteHelper.softDeleteAll/softDeleteByIds 批量 UPDATE，消除 N+1 查询
- SoftDeleteJpaRepository.deleteById() 默认抛出异常，新增 deleteByIdIfExists() 静默版本

P1 修复:
- EncryptConverter 盐值缓存改用 ConcurrentHashMap，消除 System.setProperty() 并发风险
- MergeSpec H2 UPSERT 重试添加指数退避 (10ms, 20ms, 40ms)
- QuerySpec.timeout() 在 then() 复制时添加范围验证，applyQuerySettings() 使用 Math.toIntExact() 防溢出
- ProjectionSpec 新增 withDefaults() 工厂方法，自动启用软删除和租户过滤
- SqlSlowQueryInterceptor Javadoc 标注仅限 Hibernate 环境

P2 修复:
- MergeSpec extractFieldValues() 消除代码重复，委托给 extractFieldValuesFrom()
- MergeSpec 新增 executeBatchInSeparateTransactions() 分事务批次执行
- MyJpaTemplate 新增 executeBatch(MergeSpec, List, int) 批量 UPSERT 便捷方法
- LambdaUtils.methodToProperty() 支持 Java Record accessor 方法
- CteSpec.checkSqlSafety() 增加注释注入和分号注入检测
- TenantContext MAX_IGNORE_COUNT 改为可配置 (myjpa-plus.tenant.max-ignore-count)
- EntityCodeGenerator 支持从 classpath/文件系统加载自定义模板